--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,10 +8,10 @@ logging:
 
 spring:
     datasource:
-        name: test
-        url: jdbc:mysql://192.168.16.137:3306/test
+        name: dev
+        url: jdbc:mysql://localhost:3306/qandp?useUnicode=true&characterEncoding=utf-8
         username: root
-        password:
+        password: fuq
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
