--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@
     #port: 8080
     #context-path: #/lovepei/
 
-logging:
-    level:
-        tk.mybatis: TRACE
+#logging:
+    #level:
+        #com.loepei.sandwich: TRACE
 
 spring:
     datasource:
@@ -32,17 +32,15 @@ spring:
         view:
             prefix: /templates/
             suffix: .ftl
-    freemarker:
-        cache: false
-        request-context-attribute: request
+
 
 
 mybatis:
-    type-aliases-package: com.lovepei.sandwich.entity
+    type-aliases-package: com.lovepei.sandwich.domain
     mapper-locations: classpath:mapper/*.xml
 
-pagehelper:
-    helperDialect: mysql
-    reasonable: true
-    supportMethodsArguments: true
-    params: count=countSql
+#pagehelper:
+    #helperDialect: mysql
+    #reasonable: true
+    #supportMethodsArguments: true
+    #params: count=countSql
