--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,9 +38,38 @@ spring:
 mybatis:
     type-aliases-package: com.lovepei.sandwich.domain
     mapper-locations: classpath:mapper/*.xml
+    configuration:
+        mapUnderscoreToCamelCase: true
+        useColumnLabel : true
+        useGeneratedKeys: true
 
-#pagehelper:
-    #helperDialect: mysql
-    #reasonable: true
-    #supportMethodsArguments: true
-    #params: count=countSql
+pagehelper:
+    helperDialect: mysql
+    offsetAsPageNum: true
+    rowBoundsWithCount: true
+    pageSizeZero: true
+    reasonable: false
+    supportMethodsArguments: false
+    returnPageInfo: none
+
+# REDIS (RedisProperties)
+redis:
+    # Redis数据库索引（默认为0）
+    database: 0
+    # Redis服务器地址
+    host: localhost
+    # Redis服务器连接端口
+    port: 6379
+    # Redis服务器连接密码（默认为空）
+    password:
+    pool:
+        # 连接池最大连接数（使用负值表示没有限制）
+        max-active: 8
+        # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: -1
+        # 连接池中的最大空闲连接
+        max-idle: 8
+        # 连接池中的最小空闲连接
+        min-idle: 0
+        # 连接超时时间（毫秒）
+        timeout: 0
